<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/scroll_view_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_margin="@dimen/margin_default"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_default"
            android:gravity="center"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            android:text="@string/start_workflow_info"/>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_authentication_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/authentication_start"/>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_authentication_start_required_rights"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/authentication_start_required_rights"/>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_authentication_start_can_allowed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/authentication_start_can_allowed"/>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_authentication_start_developer_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/authentication_start_developer_mode" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_authentication_start_with_card_simulator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/authentication_start_with_card_simulator" />

        <RadioGroup
            android:id="@+id/options_simulator"
            android:checkedButton="@+id/option_simulator_default_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/option_simulator_default_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/authentication_start_with_card_simulator_default_data"/>
            <RadioButton
                android:id="@+id/option_simulator_different_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/authentication_start_with_card_simulator_different_name"/>
            <RadioButton
                android:id="@+id/option_simulator_different_pseudonym"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/authentication_start_with_card_simulator_different_pseudonym"/>
        </RadioGroup>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <com.governikus.ausweisapp.tester.wrapper.AuthResultView
            android:id="@+id/authentication_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_default"/>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
