<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/scroll_view_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_margin="@dimen/margin_default"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_default"
            android:gravity="center"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            android:text="@string/start_workflow_info"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_change_pin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_pin_start"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_transport_change_pin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_transport_pin_start"/>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
