<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_pin_change_workflow"
    app:startDestination="@id/enter_pin_start">

    <fragment
        android:id="@+id/enter_pin_start"
        android:name="com.governikus.ausweisapp.tester.wrapper.card.ui.password.EnterPasswordFragment"
        android:label="@string/enter_password_pin_title"
        tools:layout="@layout/fragment_enter_password">
        <action
            android:id="@+id/password_entered"
            app:destination="@id/enter_new_pin"/>
    </fragment>
    <fragment
        android:id="@+id/enter_pin"
        android:name="com.governikus.ausweisapp.tester.wrapper.card.ui.password.EnterPasswordFragment"
        android:label="@string/enter_password_pin_title"
        tools:layout="@layout/fragment_enter_password">
        <action
            android:id="@+id/password_entered"
            app:destination="@id/reading_progress"
            app:popUpTo="@id/navigation_pin_change_workflow"/>
    </fragment>
    <fragment
        android:id="@+id/enter_new_pin"
        android:name="com.governikus.ausweisapp.tester.wrapper.card.ui.newpin.EnterNewPinFragment"
        android:label="@string/enter_new_pin_title"
        tools:layout="@layout/fragment_enter_new_pin">
        <action
            android:id="@+id/password_entered"
            app:destination="@id/reading_progress"
            app:popUpTo="@id/navigation_pin_change_workflow"/>
    </fragment>
    <fragment
        android:id="@+id/enter_puk"
        android:name="com.governikus.ausweisapp.tester.wrapper.card.ui.password.EnterPasswordFragment"
        android:label="@string/enter_password_puk_title"
        tools:layout="@layout/fragment_enter_password">
        <argument
            android:name="passwordType"
            app:argType="string"
            android:defaultValue="PUK"/>
        <action
            android:id="@+id/password_entered"
            app:destination="@id/reading_progress"
            app:popUpTo="@id/navigation_pin_change_workflow"/>
    </fragment>
    <fragment
        android:id="@+id/enter_can"
        android:name="com.governikus.ausweisapp.tester.wrapper.card.ui.password.EnterPasswordFragment"
        android:label="@string/enter_password_can_title"
        tools:layout="@layout/fragment_enter_password">
        <argument
            android:name="passwordType"
            app:argType="string"
            android:defaultValue="CAN"/>
        <action
            android:id="@+id/password_entered"
            app:destination="@id/reading_progress"
            app:popUpTo="@id/navigation_pin_change_workflow"/>
    </fragment>
    <fragment
        android:id="@+id/position_card"
        android:name="com.governikus.ausweisapp.tester.wrapper.card.ui.PositionCardFragment"
        android:label="@string/position_card_title"
        tools:layout="@layout/fragment_position_card">
        <action
            android:id="@+id/action_card_recognized"
            app:destination="@id/reading_progress"
            app:popUpTo="@id/navigation_pin_change_workflow"/>
    </fragment>
    <fragment
        android:id="@+id/reading_progress"
        android:name="com.governikus.ausweisapp.tester.wrapper.card.ui.ReadingProgressFragment"
        android:label="@string/reading_progress_title"
        tools:layout="@layout/fragment_reading_progress">
        <action
            android:id="@+id/action_card_requested"
            app:destination="@id/position_card"
            app:popUpTo="@id/navigation_pin_change_workflow"/>
        <action
            android:id="@+id/action_request_pin"
            app:destination="@id/enter_pin"
            app:popUpTo="@id/navigation_pin_change_workflow"/>
        <action
            android:id="@+id/action_request_can"
            app:destination="@id/enter_can"
            app:popUpTo="@id/navigation_pin_change_workflow"/>
        <action
            android:id="@+id/action_request_puk"
            app:destination="@id/enter_puk"
            app:popUpTo="@id/navigation_pin_change_workflow"/>
        <action
            android:id="@+id/action_request_new_pin"
            app:destination="@id/enter_new_pin"
            app:popUpTo="@id/navigation_pin_change_workflow"/>
    </fragment>

</navigation>
