<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/workflow_selection_fragment">

    <fragment
        android:id="@+id/workflow_selection_fragment"
        android:name="com.governikus.ausweisapp.tester.wrapper.WorkflowSelectionFragment"
        android:label="@string/workflow_selection_title"
        tools:layout="@layout/fragment_workflow_selection">
        <action
            android:id="@+id/action_start_authentication_workflow"
            app:destination="@id/authenticationWorkflowFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
        <action
            android:id="@+id/action_start_pin_change_workflow"
            app:destination="@id/changePinWorkflowFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
    </fragment>

    <fragment
        android:id="@+id/authenticationWorkflowFragment"
        android:name="com.governikus.ausweisapp.tester.wrapper.AuthenticationWorkflowFragment"
        android:label="@string/authentication_title"
        tools:layout="@layout/fragment_authentication_workflow"/>

    <fragment
        android:id="@+id/changePinWorkflowFragment"
        android:name="com.governikus.ausweisapp.tester.wrapper.ChangePinWorkflowFragment"
        android:label="@string/change_pin_title"
        tools:layout="@layout/fragment_change_pin_workflow"/>

</navigation>
