<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scroll_view"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/scroll_view_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_lock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default"
            android:layout_marginHorizontal="@dimen/margin_default"
            android:contentDescription="@string/content_description_lock"
            android:src="?attr/idl_enterNewPinIcon"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tv_info_header"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintVertical_bias="0"/>

        <TextView
            android:id="@+id/tv_info_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default"
            android:layout_marginHorizontal="@dimen/margin_default"
            android:gravity="center"
            android:text="@string/enter_new_pin_info_header"
            android:textAlignment="center"
            android:textAppearance="?attr/idl_textAppearanceTitle"
            app:layout_constraintBottom_toTopOf="@id/tv_info_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_lock"/>

        <TextView
            android:id="@+id/tv_info_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default"
            android:layout_marginHorizontal="@dimen/margin_default"
            android:gravity="center"
            android:text="@string/enter_new_pin_info_text"
            android:textAlignment="center"
            android:textAppearance="?attr/idl_textAppearanceBody"
            app:layout_constraintBottom_toTopOf="@id/til_new_pin"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_info_header"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_new_pin"
            android:layout_width="@dimen/password_input_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginHorizontal="@dimen/margin_default"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_info_text"
            app:layout_constraintBottom_toTopOf="@id/til_confirm_new_pin"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_new_pin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_new_pin_field"
                android:imeOptions="actionNext"
                android:inputType="numberPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_confirm_new_pin"
            android:layout_width="@dimen/password_input_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default"
            android:layout_marginHorizontal="@dimen/margin_default"
            app:errorEnabled="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_new_pin"
            app:layout_constraintBottom_toTopOf="@id/btn_start_pin_change"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_confirm_new_pin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_new_pin_confirmation_field"
                android:inputType="numberPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_start_pin_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_large"
            android:text="@string/enter_new_pin_accept"
            app:icon="@drawable/ic_check_24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
